--- a/css/style.css
+++ b/css/style.css
@@ -229,4 +229,7 @@ h1, h2, h3, h4, h5, h6 {
  
 
 /* *****************************************************************************************imagepost respondsive ****************************************************************************************/
-
+h1 , h2 , h3 ,h4, h5,h6{
+    text-align: center;
+    color:#000;
+}
