--- a/nary/contactus/contactus.css
+++ b/nary/contactus/contactus.css
@@ -16,7 +16,7 @@ body{
   
 }
 h1{
-    color: #fff; 
+    color: rgb(29, 3, 3); 
     text-shadow: 1px 1px 0 rgba(0,0,0,0.4);
     padding-top:40px;
     font-size: 40px; 
