--- a/nary/aboutus/about.css
+++ b/nary/aboutus/about.css
@@ -101,5 +101,8 @@
     color: #fff;
     background-color: #355c7d;
   }
-  
+  h1,h2,h3,h4,h5,h6{
+    text-align: center;
+   color: black; 
+  }
   
