--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,46 @@ h1 , h2 , h3 ,h4, h5,h6{
     text-align: center;
     color:#000;
 }
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 600px;
+    padding: 20px;
+    box-sizing: border-box;
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    display: flex;
+    transition: .5s;
+}
+.box :hover{
+    box-shadow: 0 15px 30px rgba(0, 0, 0, .5);
+}
+.box .imgBx{
+    width: 150px;
+    flex: 0 0 150px;
+}
+.box .imgBx img{
+    max-width: 100%;
+}
+.box .content{
+    padding-left: 20px;
+}
+.box .content h2{
+    margin: 0;
+    padding-left: 0;
+    color: #000;
+    font-size: 22px;
+}
+.box .content p{
+    margin: 0;
+    padding: 10px 0 0;
+    text-align: justify;
+}
